tests/NormalTests/paczka1/fuzzy1/71489525.err
Error in line 8: S490 S490 96,0
Error in line 7: jsEVnedBIe S490 53,8
